# log-helper

./: .gitignore  BUILD.md  CMakeLists.txt  Cargo.toml  README.md  build.bat  build.ps1  build_err.txt  check.json  check_output.txt  clean.bat  clean_build.bat  convert_icon.ps1  error_log.txt  errors.txt  index.html  install.bat  install_cpp_tools.bat  package-lock.json  package.json  run.bat  run_debug.bat  run_nmake.bat  sql_report_all.html  test_compile.bat  vite.config.ts
.agent/rules/: sqltools.md
rust/: Cargo.toml
rust/src/: app.rs  main.rs
rust/src/config/: mod.rs
rust/src/core/: log_parser.rs  query_processor.rs  sql_formatter.rs
rust/src/ui/: main_window.rs  mod.rs  theme.rs
rust/src/utils/: encoding.rs  mod.rs
src/: App.tsx  app.rs  main.cpp  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/core/: db.rs  html_generator.rs  log_parser.rs  mod.rs  query_processor.rs
src-tauri/src/utils/: clipboard.rs  file_helper.rs  mod.rs
src/api/: commands.ts  tauri.ts  types.ts
src/app/: Application.cpp  Application.h
src/components/: Layout.tsx
src/components/Connections/: ConnectionModal.tsx  ConnectionSidebar.tsx
src/components/LogParser/: ExecutionResult.tsx  IdSidebar.tsx  LogParserTab.tsx
src/components/SqlExecutor/: ResultTable.tsx  SqlEditor.tsx  SqlExecutorTab.tsx
src/config/: ConfigManager.cpp  ConfigManager.h  mod.rs
src/core/: HtmlGenerator.cpp  HtmlGenerator.h  LogParser.cpp  LogParser.h  QueryProcessor.cpp  QueryProcessor.h  SqlFormatter.cpp  SqlFormatter.h  db.rs  log_parser.rs  mod.rs  query_processor.rs  sql_formatter.rs
src/styles/: index.css  main.css
src/types/: index.ts
src/ui/: MainWindow.cpp  MainWindow.h  Theme.cpp  Theme.h  main_window.rs
src/utils/: ClipboardHelper.cpp  ClipboardHelper.h  Encoding.cpp  Encoding.h  FileHelper.cpp  FileHelper.h  SqlConnector.cpp  SqlConnector.h  clipboard.rs  encoding.rs  sql_connector.rs
