[package]
name = "sql-log-parser"
version = "2.0.0"
edition = "2021"
authors = ["Log Helper Team"]
description = "SQL Log Parser with Native Windows UI"

[dependencies]
# GUI - minimal features
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex
regex = "1"
once_cell = "1.18"

# Cross-platform clipboard
arboard = "3"

# Native file dialogs
rfd = "0.14"

# Encoding detection
encoding_rs = "0.8"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
