[package]
name = "sql-log-parser"
version = "2.0.0"
edition = "2021"
authors = ["Log Helper Team"]
description = "SQL Log Parser with Native Windows UI"

[dependencies]
# GUI - minimal features
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex
regex = "1"
once_cell = "1.18"

# Cross-platform clipboard
arboard = "3"

# Native file dialogs
# Native file dialogs
rfd = "0.14"
directories = "5"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }



# Encoding detection
encoding_rs = "0.8"
sqlformat = "0.2"

# Database Connectivity
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "any"] }
tokio = { version = "1", features = ["full"] }
tiberius = { version = "0.12", features = ["tds73", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
async-trait = "0.1"


[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
