[package]
name = "sql_log_parser"
version = "2.0.0"
edition = "2021"
authors = ["Your Name"]
description = "SQL Log Parser - Parse, format, and execute SQL from log files"

[dependencies]
# GUI Framework (immediate mode like ImGui)
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex for log parsing
regex = "1"
once_cell = "1"

# Encoding (SHIFT-JIS to UTF-8)
encoding_rs = "0.8"

# Windows clipboard
clipboard-win = "5"

# Date/time utilities
chrono = "0.4"

# Native file dialogs
rfd = "0.15"

# Error handling
thiserror = "1"
anyhow = "1"

# ODBC for SQL Server (optional feature)
[dependencies.odbc-api]
version = "8"
optional = true

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader"
]}

[features]
default = ["sql"]
sql = ["odbc-api"]

# Release optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

# Dev profile for faster builds
[profile.dev]
opt-level = 0
debug = true
