[package]
name = "sql_log_parser"
version = "2.0.0"
description = "SQL Log Parser - Parse, format, and execute SQL from log files"
authors = ["Your Name"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "dialog-all", "fs-all", "path-all", "clipboard-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
once_cell = "1"
encoding_rs = "0.8"
clipboard-win = "5"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# ODBC (optional)
odbc-api = { version = "8", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader"
] }

[features]
default = ["sql", "custom-protocol"]
sql = ["odbc-api"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
