[package]
name = "sql-log-parser"
version = "2.1.0"
edition = "2021"
authors = ["Log Helper Team"]
description = "SQL Log Parser with Tauri + React UI"

[lib]
name = "sql_log_parser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Regex
regex = "1"
once_cell = "1.18"

# Cross-platform clipboard (used internally by query_processor)
arboard = "3"

# System
directories = "5"
anyhow = "1.0"
uuid = { version = "1", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Encoding
encoding_rs = "0.8"
sqlformat = "0.2"

# Database Connectivity
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "any"] }
tokio = { version = "1", features = ["full"] }
tiberius = { version = "0.12", features = ["tds73", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
futures-util = "0.3"
async-trait = "0.1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
